--- a/src/runtime/assets/main.css
+++ b/src/runtime/assets/main.css
@@ -4,8 +4,8 @@
     themes: all;
 }
 
-@source "../components/**";
-@source "../shared/componentsMaps/**";
+/* @source "../components/**";
+@source "../shared/componentsMaps/**"; */
 
 /* Boilerplate Light Theme */
 @plugin "daisyui/theme" {
