--- a/src/runtime/assets/main.css
+++ b/src/runtime/assets/main.css
@@ -1,5 +1,8 @@
 @import 'tailwindcss';
 
+@source "../components/**";
+@source "../shared/componentsMaps/**";
+
 @plugin 'daisyui' {
     themes: all;
 }
